[package]
name = "ferrox"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9.10"
crc32fast = "1.5.0"
serde = { version = "1", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.10.0"
tempfile = "3.26.0"

[[bench]]
name = "matching_bench"
harness = false

[[bench]]
name = "ring_bench"
harness = false

[[bench]]
name = "wal_bench"
harness = false

[[example]]
name = "subscriber"
